@@ -766,6 +766,10 @@ void EntityList::AESpell(Mob *caster, Mob *center, uint16 spell_id, bool affect_
 			continue;
 		if (spells[spell_id].targettype == ST_TargetAENoPlayersPets && curmob->IsPetOwnerClient())
 			continue;
+		if (spells[spell_id].targettype == ST_AreaClientOnly && !curmob->IsClient())
+			continue;
+		if (spells[spell_id].targettype == ST_AreaNPCOnly && !curmob->IsNPC())
+			continue;
 
 		if (spells[spell_id].targettype == ST_Ring) {
 			dist_targ = curmob->DistNoRoot(caster->GetTargetRingX(), caster->GetTargetRingY(), caster->GetTargetRingZ());
